--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,18 @@ h1{
     text-align: center;
     font-size: 3em;
 }
-h2{
-    text-align: center;
-    font-size: 20px;
+img{
+    width: 400px;
+    height: 450px;
+    margin-right: 15px;
+    float: left;
 }
-.center{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 35%;
+button{
+    font-size: 20px;
+    background-color: plum;
 }
 p{
-    font-size: 20px;
+    font-size: 30px;
+    margin-left: auto;
 }
+
